--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="portfolio">
         <div class="container">
             <h2>Portfolio</h2>
-            <button>prijects</button>
+            <button>projects</button>
             <button>profile</button>
            
             
